--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.ar.sceneform.plugin'
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 sceneform.asset('sampledata/models/andy.obj', // 'Source Asset Path' specified during import.
         'default',                            // 'Material Path' specified during import.
@@ -47,4 +49,5 @@ dependencies {
     implementation 'com.google.ar:core:1.15.0'
     implementation 'com.google.ar.sceneform.ux:sceneform-ux:1.15.0'
     implementation 'com.google.ar.sceneform:core:1.15.0'
+    implementation 'com.google.firebase:firebase-analytics:17.2.2'
    }
